deployment/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: video-platform
  labels:
    app.kubernetes.io/part-of: video-upload-platform
